add link to wiki

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,8 @@
 <div class="horoscope">
-  You will have a day full of <%= @prediction %>.
+  <%= @prediction %>
+  <p>
+  <a href="<%= @wiki_url %>">Link to wikipedia</a>
+  </p>
   <p>
     <a href="/">Try again</a>
   </p>
